# SuckingVampire

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt
src/: CMakeLists.txt  main.cpp
src/Common/: common.cpp  common.h  movment.cpp
src/Game/: game.cpp  game.h
src/Menu/: menu.cpp  menu.h
src/ecs/: Enemyrendersystem.hpp  Entityspawn_system.hpp  UIButton_system.hpp  UIInput_system.hpp  UIRender_system.hpp  UISpawn_system.hpp  components.hpp  core.hpp  damage_system.hpp  enemychase_system.hpp  exploded_system.hpp  lifetime_system.hpp  meteor_system.hpp  movement_system.hpp  playerautoattack_system.hpp  projectilehit_system.hpp  projectilerender_system.hpp  type.hpp
src/ecs/internal/: component_manager.cpp  component_manager.hpp  componentarray.inl  entity_manager.cpp  entity_manager.hpp  system_manager.cpp  system_manager.hpp
src/ecs/tests/: core_suitetests.cpp
